--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -22,7 +22,7 @@ gap: 50px;
  
 }
 .card_btn {
-  width: 235px;
+  width: 80px;
 }
 .card_img{
   max-width: 265px;
@@ -54,12 +54,20 @@ gap: 50px;
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
-  background: #CA0200;
+  background-color: #000000;
+
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 21.5px;
   padding: 9px 0;
   margin: 0 auto;
-  margin-left: 15px;
   text-align: center;
   cursor: pointer;
+}
+.btns{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.more{
+  background: #e7d7c1;
 }
