--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -19,7 +19,6 @@ gap: 50px;
 }
 .card_item{
   max-width: 265px;
- 
 }
 .card_btn {
   width: 80px;
@@ -70,4 +69,9 @@ gap: 50px;
 }
 .more{
   background: #e7d7c1;
+}
+@media  (max-width: 500px) {
+.card_item{
+  margin: 0 auto;
+}
 }
